method getRandomCharacter() has been corrected, method init() has been optimized