@@ -1,9 +1,9 @@
 package mate.academy.rickandmorty.service;
 
 import jakarta.annotation.PostConstruct;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Random;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import mate.academy.rickandmorty.dto.internal.CharacterResponseDto;
 import mate.academy.rickandmorty.mapper.CharacterMapper;
@@ -22,20 +22,22 @@ public class RickAndMortyWikiImpl implements RickAndMortyWiki {
     @PostConstruct
     private void init() {
         int pagesQuantity = rickAndMortyClient.getPage(1).getInfo().getPages();
+        List<Character> characters = new ArrayList<>();
         for (int i = 1; i <= pagesQuantity; i++) {
-            rickAndMortyClient.getPage(i).getResults().stream()
-                    .map(characterMapper::toModel)
-                    .map(characterRepository::save)
-                    .collect(Collectors.toList());
+            characters.addAll(
+                    rickAndMortyClient.getPage(i).getResults().stream()
+                            .map(characterMapper::toModel)
+                            .toList()
+            );
         }
+        characterRepository.saveAll(characters);
     }
 
     @Override
     public CharacterResponseDto getRandomCharacter() {
-        int numberOfCharacters = rickAndMortyClient.getPage(1).getInfo().getCount();
         Random random = new Random();
-        int randomCharacterId = random.nextInt(numberOfCharacters) + 1;
-        Character character = characterRepository.findById((long) randomCharacterId).get();
+        long randomCharacterId = random.nextLong(characterRepository.count()) + 1;
+        Character character = characterRepository.findById(randomCharacterId).get();
         return characterMapper.toDto(character);
     }
 
